--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "element-ui": "^2.4.6",
+    "jshint": "^2.9.6",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
