--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "element-ui": "^2.4.6",
     "jshint": "^2.9.6",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
